helm-drupal/drupal/ingress-staging-cer-alpha-canada.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drupal-pilot-cer-alpha-canada-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - drupal-pilot.cer.alpha.canada.ca
    secretName: drupal-pilot-alpha-canada-tls-secret-staging
  rules:
  - host: drupal-pilot.cer.alpha.canada.ca
    http:
      paths:
      - backend:
          serviceName: cer-drupal-nginx
          servicePort: 80
        path: /
